--- a/app/views/holding_requests/_new_on_order.html.erb
+++ b/app/views/holding_requests/_new_on_order.html.erb
@@ -1,15 +1,11 @@
-<%
-# The 'on order' request option
-%>
-<%= request_form("on_order") do %>
-  <%= request_option do %>
-    <%= request_link_or_text(
-      "Request for this item to be held for you once processed.", 
-        "on_order") %>
-    With open orders, the library cannot predict or guarantee the date of delivery. 
+<%- # The 'on order' request option -%>
+<%= request_form(:on_order) do %>
+  <%= request_option(:on_order) do %>
+    <%= request_link_or_text(t('holding_requests.new.processing.default'), :on_order) %>
+    With open orders, the library cannot predict or guarantee the date of delivery.
     If you have an urgent deadline, it is better to use Interlibrary Loan.<br />
-    <%= pickup_locations_fields %>
+    <%= pickup_locations_field_set %>
     <%= delivery_times %>
   <% end %>
-  <%= submit_tag 'Submit' if pickup_locations.length > 1 %>
+  <%= submit_tag 'Submit' if pickup_locations.size > 1 %>
 <% end %>
