--- a/app/views/holding_requests/show.html.erb
+++ b/app/views/holding_requests/show.html.erb
@@ -1,5 +1,3 @@
 <div class="text-success">
-  <%= (@scan) ?
-    "Your scan request has been processed. You will receive an email when the item is available." :
-      "Your request has been processed. You will be notified when this item is available to pick up at #{decode_sub_library(@pickup_location)}." %>
+  <%= success_text %>
 </div>
