--- a/app/assets/stylesheets/resolve/_common.scss
+++ b/app/assets/stylesheets/resolve/_common.scss
@@ -35,7 +35,7 @@ nav {
   }
 }
 
-.request_options.form input[name='entire'] {
+.holding-request-options.form input[name='entire'] {
   float: left;
   margin-right: .5em;
 }
