--- a/app/views/resolve/_holding.html.erb
+++ b/app/views/resolve/_holding.html.erb
@@ -1,94 +1,49 @@
 <%
-# Get and display holdings
-holdings = holding.find_all{|response| response.service_type_value_name.eql? "holding"}
-# Put current institution's holdings first.
-(institutional_holding, other_holding) = holdings.partition {|response|
-  current_primary_institution.code.to_s.eql?(response.service_data[:institution] || response.service.group) }
-holdings = institutional_holding + other_holding
-unless holdings.empty? %>
-  <div class="container-fluid umlaut-holdings">
-    <p style="margin-bottom: 1em;"><strong><%=
-      link_to("View Maps and Call Number Locations",
-        "http://library.nyu.edu/bobcat/callno/",
-          :target=>"_blank") %></strong></p><%
-    # Process each holding.
-    holdings.each do |service_response|
-      view_data = service_response.view_data
-      # Only display holdings that aren't expired.
-      unless view_data[:expired] == true %>
-        <div class="umlaut-holding">
-          <div class="row-fluid">
-            <div class="span3"><strong><%= view_data[:collection_str] %></strong></div>
-            <div class="span4"><%= view_data[:call_number]%></div><%
-            # Set status class based on configured available statuses
-            status_class = 
-              umlaut_config.holdings.available_statuses.include?(view_data[:status]) ? 
-                'text-success' : '' %>
-            <div class="span3 <%= status_class %>"><%= view_data[:status] %></div>
-            <div class="span2">
-              <% # More info link %>
-              <%= link_to("More Info", { controller: "link_router", id: service_response.id }, 
-                target: "_blank", class: "btn btn-success" ) %>
-              <% # Request link %>
-              <%= render("request_link", service_response: service_response) if requestable?(service_response) %>
-            </div>
-          </div>
-          <% # Display edition info
-          if (not view_data[:match_reliability].blank?) and 
-            view_data[:match_reliability] != ServiceResponse::MatchExact %>
-            <div class="row-fluid">
-              <div class="span11 offset1">
-                <div class="umlaut-content-indent edition_information">
-                  <% unless view_data[:edition_str].blank? %>
-                    <em class="text-info">Edition information</em> <%= view_data[:edition_str] %>
-                  <% else %>
-                    <em class="text-info">May be alternate edition.</em>
-                  <% end %>
-                <div>
-              </div>
-            </div><%
-          end
-          # Display notes
-          unless view_data[:notes].blank? %>
-            <div class="row-fluid notes">
-              <div class="span11 offset1"><%= view_data[:notes] %></div>
-            </div><%
-          end
-          # Display coverage
-          unless view_data[:coverage].blank? %>
-            <div class="row-fluid coverage">
-              <div class="span11 offset1"><%=
-                list_with_limit("copies_#{service_response.id}", view_data[:coverage_str_array]) do |item, index| %>
-                  <li><%= item %></li><%
-                end %>
-              </div>
-            </div><%
-          end %>
-        </div><%
-      end
-    end %>
-  </div><%
-  # In order to make sure we always get the freshest
-  # holdings data we expire old holdings.
-  # Similar to RTA in Primo.
-  expire_old_holdings(@user_request, holdings)
+# Destroy Expired "NYU_Primo_Source" ServiceResponses
+expire_or_destroy_nyu_primo_source_service_responses(@user_request)
+holdings = holding.find_all do |service_response| 
+  service_response.service_type_value_name == 'holding'
 end
-# Process the case where holdings are empty
-if holdings.empty? %>
-  <div class="umlaut-content-indent"><%
-    # Get and display holding searches
-    searches = holding.find_all{|response| response.service_type_value_name.eql? "holding_searches"}
-    searches.each do | result_st |
-      response = result_st.view_data %>
-      <p class="umlaut-holding-search"><%= link_to response[:display_text], 
-        {:controller=>'link_router', :id => result_st.id}, 
-          :target => "_blank" %></p><%
-    end
-    # Display "Not Available" if we've completed our service run and 
-    # both holdings and holding searches are empty
-    if (holdings.blank? and searches.blank? and 
-      (not service_types_in_progress?(['holding', 'holding_search']))) %>
-      <p class="umlaut-unavailable">Not Available</p><%
+# Put current institution's holdings first.
+(institutional_holding, other_holding) = holdings.partition do |service_response|
+  "#{current_primary_institution.code}" ==
+    (service_response.service_data[:institution] || service_response.service.group)
+end
+holdings = institutional_holding + other_holding
+%>
+<% unless holdings.empty? %>
+  <%- # Display holdings -%>
+  <div class="container-fluid umlaut-holdings">
+    <p style="margin-bottom: 1em;">
+      <strong>
+        <%= link_to('View Maps and Call Number Locations',
+          'http://library.nyu.edu/bobcat/callno/', target: '_blank') %>
+      </strong>
+    </p>  
+    <% holdings.each do |service_response| %>
+      <%= render('holding_response_item', service_response: service_response) %>
+    <% end %>
+  </div>
+<% else %>
+  <div class="umlaut-content-indent">
+    <%- # Display holding searches -%>
+    <% holding_searches = holding.find_all do |service_response|
+      service_response.service_type_value_name == 'holding_searches'
     end %>
-  </div><%
-end %>
+    <% unless holding_searches.empty? %>
+      <% holding_searches.each do |service_response| %>
+        <%= render('holding_search', service_response: service_response) %>
+      <% end %>
+    <% else %>
+      <% if !service_types_in_progress?(['holding', 'holding_search']) %>
+        <%-
+        # Display "Not Available" if we've completed our service run and 
+        # both holdings and holding searches are empty
+        -%>
+        <p class="umlaut-unavailable">Not Available</p>
+      <% end %>
+    <% end %>
+  </div>
+<% end %>
+<%- # Destroy Successful "NYU_Primo_Source" DispatchedServices -%>
+<% destroy_successful_nyu_primo_source_dispatched_services(@user_request) %>
