--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -5,6 +5,7 @@
 @import "resolve/variables";
 @import "nyulibraries/header";
 @import "nyulibraries/login";
+@import "nyulibraries/nav";
 @import "nyulibraries/mixins";
 @import "nyulibraries/responsive";
 @import "umlaut";
