--- a/app/views/resolve/_request_link.html.erb
+++ b/app/views/resolve/_request_link.html.erb
@@ -7,7 +7,7 @@
   <%- # Link to login screen -%>
   <strong>
     <%= link_to("Login to Request",
-      login_path({return_url: url_for_request(service_response.request)}),
+      login_url({return_url: url_for_request(service_response.request)}),
       target: "_blank", class: "request-login-link") %>
   </strong>
 <% end %>
