Add nav styles for the resolve screen to get the .nyu-login elements coming correct

--- a/app/assets/stylesheets/resolve_nyush.css.scss
+++ b/app/assets/stylesheets/resolve_nyush.css.scss
@@ -6,6 +6,7 @@
 @import "nyulibraries/nyush/variables";
 @import "nyulibraries/header";
 @import "nyulibraries/login";
+@import "nyulibraries/nav";
 @import "nyulibraries/mixins";
 @import "nyulibraries/responsive";
 @import "umlaut";
