--- a/app/assets/stylesheets/resolve_cu.css.scss
+++ b/app/assets/stylesheets/resolve_cu.css.scss
@@ -7,6 +7,7 @@
 @import "nyulibraries/header";
 @import "nyulibraries/cu/header";
 @import "nyulibraries/login";
+@import "nyulibraries/nav";
 @import "nyulibraries/mixins";
 @import "nyulibraries/responsive";
 @import "umlaut";
