--- a/app/assets/stylesheets/resolve_hsl.css.scss
+++ b/app/assets/stylesheets/resolve_hsl.css.scss
@@ -7,6 +7,7 @@
 @import "nyulibraries/header";
 @import "nyulibraries/hsl/header";
 @import "nyulibraries/login";
+@import "nyulibraries/nav";
 @import "nyulibraries/mixins";
 @import "nyulibraries/responsive";
 @import "umlaut";
