Remove the target attribute from the "Login for Request Options" link to ensure the links opens in the same window

--- a/app/views/resolve/_request_link.html.erb
+++ b/app/views/resolve/_request_link.html.erb
@@ -8,6 +8,6 @@
   <strong>
     <%= link_to(t('resolve.holdings.login_text'),
       login_url({return_url: url_for_request(service_response.request)}),
-      target: "_blank", class: "request-login-link") %>
+      class: "request-login-link") %>
   </strong>
 <% end %>
