--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -23,7 +23,7 @@
         t.type  = 'text/javascript';
         t.async = true;
         t.id    = 'gauges-tracker';
-        t.setAttribute('data-site-id', current_primary_institution.views["gauges_tracking_code"]);
+        t.setAttribute('data-site-id', '<%= current_primary_institution.views["gauges_tracking_code"] %>');
         t.src = '//secure.gaug.es/track.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(t, s);
