--- a/app/views/holding_requests/new.html.erb
+++ b/app/views/holding_requests/new.html.erb
@@ -10,6 +10,7 @@
     <ol class="holding-request-options">
       <%= render 'new_available' if @authorizer.available? %>
       <%= render 'new_offsite' if @authorizer.offsite? %>
+      <%= render 'new_ezborrow' if @authorizer.ezborrow? %>
       <%= render 'new_ill' if @authorizer.ill? %>
       <%= render 'new_recall' if @authorizer.recallable? %>
       <%= render 'new_processing' if @authorizer.processing? %>
