Update the CSS for the E-ZBorrow button so "E-ZBorrow" doesn't wrap on the dash

--- a/app/assets/stylesheets/resolve/_common.scss
+++ b/app/assets/stylesheets/resolve/_common.scss
@@ -59,6 +59,9 @@ nav {
   a.btn {
     display:block;
     margin-bottom: .25em;
+    &.ezborrow-link {
+      white-space: nowrap;
+    }
   }
 }
 
