Render the StackMap link partials for Holdings

--- a/app/views/resolve/_holding_response_item.html.erb
+++ b/app/views/resolve/_holding_response_item.html.erb
@@ -24,6 +24,8 @@
         <%= render("request_link", holding: holding) if requestable?(holding) %>
         <%- # E-ZBorrow link -%>
         <%= render("ezborrow_link", holding: holding) %>
+        <%- # StackMap link -%>
+        <%= render("stackmap_link", holding: holding) %>
       </div>
     </div>
     <%- # Display edition info -%>
