Load stackmap.com content over HTTPS

--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -6,7 +6,7 @@
     <%= resolve_stylesheets %>
     <%= resolve_javascripts %>
     <%= render_umlaut_head_content %>
-    <link rel="stylesheet" media="all" type="text/css" href="http://stackmap.com/integration/newschool/StackMap.css" />
+    <link rel="stylesheet" media="all" type="text/css" href="https://stackmap.com/integration/newschool/StackMap.css" />
   </head>
   <body class="umlaut no-js">
     <%= render :partial => "umlaut/header" %>
