--- a/app/views/search/_record.html.erb
+++ b/app/views/search/_record.html.erb
@@ -1,8 +1,8 @@
 <div class="result row-fluid">
-  <div class="span1 appetizer">
+  <div class="appetizer">
     <%= render 'appetizer', record: record, record_idx: record_idx %>
   </div>
-  <div class="span11 entree">
+  <div class="entree">
     <%= render 'entree', record: record %>
   </div>
 </div>
