--- a/app/assets/stylesheets/resolve_nysid.css.scss
+++ b/app/assets/stylesheets/resolve_nysid.css.scss
@@ -2,6 +2,8 @@
 @import "icons/*.png";
 @include all-icons-sprites;
 @import "nyulibraries/variables";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 @import "resolve/variables";
 @import "nyulibraries/nysid/variables";
 @import "nyulibraries/header";
