--- a/app/views/resolve/_holding_response_item.html.erb
+++ b/app/views/resolve/_holding_response_item.html.erb
@@ -3,19 +3,19 @@
 <%- # Only display holdings that aren't expired. -%>
 <% unless holding.expired? %>
   <div class="umlaut-holding">
-    <div class="row-fluid">
-      <div class="span3 location">
+    <div class="row">
+      <div class="col-md-3 location">
         <strong><%= holding.location %></strong>
       </div>
-      <div class="span4 call-number"><%= holding.call_number %></div>
+      <div class="col-md-4 call-number"><%= holding.call_number %></div>
       <%- # Set status class based on configured available statuses -%>
       <% available_statuses = umlaut_config.holdings.available_statuses
         status_class = available_statuses.include?("#{holding.status}") ?
           'text-success' : '' %>
-      <div class="span3 status <%= status_class %>">
+      <div class="col-md-3 status <%= status_class %>">
         <%= holding.status %>
       </div>
-      <div class="span2">
+      <div class="col-md-2">
         <%- # More info link -%>
         <%= link_to("More Info", {controller: "link_router",
           id: service_response.id}, target: "_blank",
@@ -31,8 +31,8 @@
     <%- # Display edition info -%>
     <% if holding.reliability.present? &&
         holding.reliability != ServiceResponse::MatchExact %>
-      <div class="row-fluid edition-information">
-        <div class="span11 offset1">
+      <div class="row edition-information">
+        <div class="col-md-11 offset1">
           <div class="umlaut-content-indent">
             <% if holding.edition.present? %>
               <em class="text-info">Edition information</em> <%= holding.edition %>
@@ -45,14 +45,14 @@
     <% end %>
     <%- # Display notes -%>
     <% if holding.notes.present? %>
-      <div class="row-fluid notes">
-        <div class="span11 offset1"><%= holding.notes %></div>
+      <div class="row notes">
+        <div class="col-md-11 offset1"><%= holding.notes %></div>
       </div>
     <% end %>
     <%- # Display coverage -%>
     <% if holding.coverage.present? %>
-      <div class="row-fluid coverage">
-        <div class="span11 offset1">
+      <div class="row coverage">
+        <div class="col-md-11 offset1">
           <%= list_with_limit("copies_#{service_response.id}", holding.coverage) do |item, index| %>
             <li><%= item %></li>
           <% end %>
