--- a/app/views/umlaut/_header.html.erb
+++ b/app/views/umlaut/_header.html.erb
@@ -1,7 +1,10 @@
-<header class="header"><h1><%= current_primary_institution.name %></h1></header>
+<header class="header">
+  <h1><%= current_primary_institution.name %></h1>
+  <div class="institution"></div>
+</header>
 <nav id="nav1">
   <%= render_umlaut_permalink %>
-  <ul class="nyu-login">
-    <li><%= login(:return_url => url_for_request(@user_request), "umlaut.institution" => institution.code ) %></li>
+  <ul>
+    <li class="nyu-login"><%= login(:return_url => url_for_request(@user_request), "umlaut.institution" => institution.code ) %></li>
   </ul>
 </nav>
