--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -28,12 +28,12 @@
 }
 
 .header {
-  background-image: url(/assets/nyulibraries/nyu/header.png);
+  background-image: image-url('nyulibraries/nyu/header.png');
   background-position: 21px 21px;
   background-repeat: no-repeat;
   background-color: #57068C;
   height: 67px;
   h1 {
-    @extend .invisible
+    @extend .invisible;
   }
 }
