Updated EZBorrow and ILL text and cucumber tests

--- a/app/views/holding_requests/_new_ezborrow.html.erb
+++ b/app/views/holding_requests/_new_ezborrow.html.erb
@@ -2,5 +2,5 @@
 <%= request_option(:ezborrow) do %>
   <%= link_to_create_holding_request(t('holding_requests.new.ezborrow.default'), :ezborrow, target: '_blank') %>.
   <br />
-  Requests arrive within 3-5 days.
+  If available to request, the item should arrive in 3-5 days for 12 week loan.
 <% end %>
