--- a/app/views/holding_requests/_new_ill.html.erb
+++ b/app/views/holding_requests/_new_ill.html.erb
@@ -1,6 +1,6 @@
 <%- # The 'ILL' request option -%>
 <%= request_option(:ill) do %>
-  <%= link_to_create_holding_request(t('holding_requests.new.ill.default'), :ill, target: '_blank') %>.
+  <%= link_to_create_holding_request(t('holding_requests.new.ill.default'), :ill, target: '_blank') %>
   <br />
   Most requests arrive within two weeks.
   Due dates and renewals are determined by the lending library.
