--- a/app/views/resolve/_ezborrow_link.html.erb
+++ b/app/views/resolve/_ezborrow_link.html.erb
@@ -1,4 +1,4 @@
-<% if can_ezborrow? && holding.bobst_reserve? %>
+<% if false && can_ezborrow? && holding.bobst_reserve? %>
   <%- # Link for "E-ZBorrow" action with class "ajax_window" for unobtrusive JS. -%>
   <%= link_to(
     t('resolve.holdings.ezborrow_text'),
