--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -16,7 +16,7 @@
       </div>
     </div>
     <%= render :partial => "umlaut/footer" %>
-    <% if Rails.env.production? || Rails.env.reindex? %>
+    <% if Rails.env.production? %>
     <script type="text/javascript">
       var _gauges = _gauges || [];
       (function() {
