Changed EZBorrow text and relevant tests

--- a/app/views/holding_requests/_new_ezborrow.html.erb
+++ b/app/views/holding_requests/_new_ezborrow.html.erb
@@ -2,5 +2,5 @@
 <%= request_option(:ezborrow) do %>
   <%= link_to_create_holding_request(t('holding_requests.new.ezborrow.default'), :ezborrow, target: '_blank') %>
   <br />
-  If available to request, the item should arrive in 3-5 days for 12 week loan.
+  If available to request, the item should arrive at Bobst Library within 3-5 business days for a twelve-week loan. Please allow additional transit time if you select another library as your pickup location.
 <% end %>
