Change permalink popup ; Finishes #75622446

--- a/app/assets/stylesheets/resolve/_permalink.scss
+++ b/app/assets/stylesheets/resolve/_permalink.scss
@@ -6,4 +6,14 @@
 
 .umlaut-permalink-container {
   line-height: 30px;
+  background-color: #efefef;
+  padding: .5em;
+  position: absolute;
+  z-index: 100;
+  width: 201px;
+  border-bottom: 2px solid #ccc;
+  border-right: 1px solid #ccc;
+  font-size: 12px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
