Added an authorizer for AFC Schedulable and if authorized a purple button that says Schedule and links out to the AFC form

--- a/app/assets/stylesheets/resolve/_common.scss
+++ b/app/assets/stylesheets/resolve/_common.scss
@@ -66,6 +66,9 @@ nav {
     &.ezborrow-link {
       white-space: nowrap;
     }
+    &.afc-schedule-link {
+      background-color: $nyu-purple !important;
+    }
     @media (min-width: $screen-md) {
       width: 8em;
     }
