--- a/app/views/resolve/_ezborrow_link.html.erb
+++ b/app/views/resolve/_ezborrow_link.html.erb
@@ -1,3 +1,4 @@
+<%- # Never  show this for now -%>
 <% if false && can_ezborrow? && holding.bobst_reserve? %>
   <%- # Link for "E-ZBorrow" action with class "ajax_window" for unobtrusive JS. -%>
   <%= link_to(
