--- a/app/views/resolve/_holding_response_item.html.erb
+++ b/app/views/resolve/_holding_response_item.html.erb
@@ -26,6 +26,8 @@
         <%= render("request_link", holding: holding) if requestable?(holding) %>
         <%- # E-ZBorrow link -%>
         <%= render("ezborrow_link", holding: holding) %>
+        <%- # AFC Schedule link -%>
+        <%= render("afc_schedule_link", holding: holding) %>
       </div>
     </div>
     <%- # Display edition info -%>
