Display different EZBorrow language depending on which institution view we are in

--- a/app/views/holding_requests/_new_ezborrow.html.erb
+++ b/app/views/holding_requests/_new_ezborrow.html.erb
@@ -1,6 +1,6 @@
 <%- # The 'E-ZBorrow' request option -%>
 <%= request_option(:ezborrow) do %>
-  <%= link_to_create_holding_request(t('holding_requests.new.ezborrow.default'), :ezborrow, target: '_blank') %>
+  <%= link_to_create_holding_request(t('holding_requests.new.ezborrow.title.default'), :ezborrow, target: '_blank') %>
   <br />
-  If available to request, the item should arrive at Bobst Library within 3-5 business days for a twelve-week loan. Please allow additional transit time if you select another library as your pickup location.
+  <%= ezborrow_request_text %>
 <% end %>
