--- a/app/views/holding_requests/_new_available.html.erb
+++ b/app/views/holding_requests/_new_available.html.erb
@@ -13,6 +13,7 @@
     <%= entire_request_option(:available) %><br />
     <%= scan_request_option(:available) %>
   <% elsif ["NISAW"].include?(holding.sub_library.code) %>
+    <%= pickup_locations_field_set %>
     <%= scan_request_option(:available) %>
   <% else %>
     <%= request_option(:available) do %>
