Change a handful of links that will break when new website goes live

--- a/app/views/search/_form.html.erb
+++ b/app/views/search/_form.html.erb
@@ -38,7 +38,7 @@
               class: "issn form-control",
               placeholder: 'Or enter the ISSN of the Journal' %>
             <span class="input-group-addon">
-              <%= link_to(content_tag(:i, "", class: "glyphicon glyphicon-info-sign"), "http://library.nyu.edu/info/umlaut/journal.html",
+              <%= link_to(content_tag(:i, "", class: "glyphicon glyphicon-info-sign"), "http://nyu.beta.libanswers.com/website/faq/134614",
                 class: ["issn-popover", "help-inline"], rel: "popover", title: "What is an ISSN?", "data-placement" => "bottom", "data-class" => "issn", target: "_blank")%>
             </span>
           </div>
@@ -111,7 +111,7 @@
             <input id="rft_id_value" name="rft_id_value" type="text" class="form-control" />
             <span class="input-group-addon">
               <%= link_to(content_tag(:span, "", class: "glyphicon glyphicon-info-sign"),
-                "http://library.nyu.edu/info/umlaut/article_identifiers.html",
+                "http://nyu.beta.libanswers.com/website/faq/128489",
                 class: ["doi-popover", "help-inline"],
                 rel: "popover",
                 title: "What is a DOI or PMID ?",
