Updating more old urls and associated tests

--- a/app/views/resolve/_holding.html.erb
+++ b/app/views/resolve/_holding.html.erb
@@ -17,7 +17,7 @@ holdings = institutional_holding + other_holding
     <p style="margin-bottom: 1em;">
       <strong>
         <%= link_to('View Maps and Call Number Locations',
-          'http://library.nyu.edu/bobcat/callno/', target: '_blank') %>
+          'https://library.nyu.edu/about/collections/search-collections/call-numbers/', target: '_blank') %>
       </strong>
     </p>
     <% holdings.each do |service_response| %>
