--- a/app/views/nyu/_sidebar.html.erb
+++ b/app/views/nyu/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <%= sidebar_section("help", content_tag(:h2, "Need help?")) do %>
   <ul class="nav-list">
-    <li><a href="http://library.nyu.edu/help/ejournals.html" target="_blank">Help using the Journals tab</a></li>
+    <li><a href="http://library.answers.nyu.edu/website/search/?t=0&topics=search%20our%20collections&adv=1&keywords=bobcat&q=journals" target="_blank">Help using the Journals tab</a></li>
     <li><a href="http://guides.nyu.edu/friendly.php?s=tutorials" target="_blank">Tutorials and self help</a></li>
     <li><a href="http://library.nyu.edu/ask" target="_blank" id="ny_aal">Ask a Librarian</a></li>
   </ul>
