--- a/app/views/nyush/_sidebar.html.erb
+++ b/app/views/nyush/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <%= sidebar_section("help", content_tag(:h2, "Need help?")) do %>
   <ul class="nav-list">
-    <li><a href="http://library.nyu.edu/help/ejournals.html" target="_blank">Help using the Journals tab</a></li>
+    <li><a href="http://library.answers.nyu.edu/website/search/?t=0&topics=search%20our%20collections&adv=1&keywords=bobcat&q=journals" target="_blank">Help using the Journals tab</a></li>
     <li><a href="http://guides.nyu.edu/friendly.php?s=shanghai" target="_blank" id="sh_aal">Ask a NYU Shanghai Librarian</a></li>
     <li><a href="https://library.nyu.edu/ask/" target="_blank" id="ny_aal">Ask a NY Librarian</a></li>
   </ul>
