Replace nyulibraries assets with templates, institutions, stylesheets, javascripts

--- a/app/assets/stylesheets/resolve_cu.css.scss
+++ b/app/assets/stylesheets/resolve_cu.css.scss
@@ -1,19 +1,19 @@
 @import "compass";
-@import "icons/*.png";
+@import "nyulibraries_stylesheets/icons/*.png";
 @include all-icons-sprites;
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "nyulibraries/variables";
+@import "nyulibraries_stylesheets/nyulibraries/variables";
 @import "resolve/variables";
-@import "nyulibraries/cu/variables";
-@import "nyulibraries/header";
-@import "nyulibraries/cu/header";
-@import "nyulibraries/login";
-@import "nyulibraries/nav";
-@import "nyulibraries/mixins";
-@import "nyulibraries/responsive";
+@import "nyulibraries_stylesheets/nyulibraries/cu/variables";
+@import "nyulibraries_stylesheets/nyulibraries/header";
+@import "nyulibraries_stylesheets/nyulibraries/cu/header";
+@import "nyulibraries_stylesheets/nyulibraries/login";
+@import "nyulibraries_stylesheets/nyulibraries/nav";
+@import "nyulibraries_stylesheets/nyulibraries/mixins";
+@import "nyulibraries_stylesheets/nyulibraries/responsive";
 @import "umlaut";
-@import "nyulibraries/misc";
+@import "nyulibraries_stylesheets/nyulibraries/misc";
 @import "resolve/common";
 @import "resolve/permalink";
 
