--- a/app/assets/stylesheets/search_cu.css.scss
+++ b/app/assets/stylesheets/search_cu.css.scss
@@ -1,4 +1,4 @@
 @import "search/variables";
-@import "bobcat_cu";
+@import "nyulibraries_stylesheets/bobcat_cu";
 @import "search/common";
 @import "search/responsive";
