--- a/app/assets/stylesheets/resolve_ns.css.scss
+++ b/app/assets/stylesheets/resolve_ns.css.scss
@@ -1,20 +1,20 @@
 @import "compass";
-@import "icons/*.png";
+@import "nyulibraries_stylesheets/icons/*.png";
 @include all-icons-sprites;
-@import "nyulibraries/variables";
+@import "nyulibraries_stylesheets/nyulibraries/variables";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "resolve/variables";
-@import "nyulibraries/ns/variables";
-@import "nyulibraries/header";
-@import "nyulibraries/ns/header";
-@import "nyulibraries/login";
-@import "nyulibraries/nav";
-@import "nyulibraries/mixins";
-@import "nyulibraries/responsive";
+@import "nyulibraries_stylesheets/nyulibraries/ns/variables";
+@import "nyulibraries_stylesheets/nyulibraries/header";
+@import "nyulibraries_stylesheets/nyulibraries/ns/header";
+@import "nyulibraries_stylesheets/nyulibraries/login";
+@import "nyulibraries_stylesheets/nyulibraries/nav";
+@import "nyulibraries_stylesheets/nyulibraries/mixins";
+@import "nyulibraries_stylesheets/nyulibraries/responsive";
 @import "umlaut";
-@import "nyulibraries/misc";
-@import "nyulibraries/ns/misc";
+@import "nyulibraries_stylesheets/nyulibraries/misc";
+@import "nyulibraries_stylesheets/nyulibraries/ns/misc";
 @import "resolve/common";
 @import "resolve/permalink";
 
