--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -1,4 +1,4 @@
 @import "search/variables";
-@import "bobcat";
+@import "nyulibraries_stylesheets/bobcat";
 @import "search/common";
 @import "search/responsive";
