--- a/app/assets/stylesheets/search_hsl.css.scss
+++ b/app/assets/stylesheets/search_hsl.css.scss
@@ -1,4 +1,4 @@
 @import "search/variables";
-@import "bobcat_hsl";
+@import "nyulibraries_stylesheets/bobcat_hsl";
 @import "search/common";
 @import "search/responsive";
