--- a/app/assets/stylesheets/search_ns.css.scss
+++ b/app/assets/stylesheets/search_ns.css.scss
@@ -1,4 +1,4 @@
 @import "search/variables";
-@import "bobcat_ns";
+@import "nyulibraries_stylesheets/bobcat_ns";
 @import "search/common";
 @import "search/responsive";
