--- a/app/assets/stylesheets/search_nysid.css.scss
+++ b/app/assets/stylesheets/search_nysid.css.scss
@@ -1,4 +1,4 @@
 @import "search/variables";
-@import "bobcat_nysid";
+@import "nyulibraries_stylesheets/bobcat_nysid";
 @import "search/common";
 @import "search/responsive";
