--- a/app/assets/stylesheets/search_nyuad.css.scss
+++ b/app/assets/stylesheets/search_nyuad.css.scss
@@ -1,4 +1,4 @@
 @import "search/variables";
-@import "bobcat_nyuad";
+@import "nyulibraries_stylesheets/bobcat_nyuad";
 @import "search/common";
 @import "search/responsive";
