--- a/app/assets/stylesheets/search_nyush.css.scss
+++ b/app/assets/stylesheets/search_nyush.css.scss
@@ -1,4 +1,4 @@
 @import "search/variables";
-@import "bobcat_nyush";
+@import "nyulibraries_stylesheets/bobcat_nyush";
 @import "search/common";
 @import "search/responsive";
