Fix header image on resolve pages

--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -28,7 +28,7 @@
 }
 
 .header {
-  background-image: image-url('nyulibraries/nyu/header.png');
+  background-image: image-url('nyulibraries_stylesheets/nyulibraries/nyu/header.png');
   background-position: 21px 21px;
   background-repeat: no-repeat;
   background-color: #57068C;
