Hide pickup location when there is only one for scan request [Finished #134454453]

--- a/app/views/holding_requests/_new_available.html.erb
+++ b/app/views/holding_requests/_new_available.html.erb
@@ -13,8 +13,8 @@
     <%= entire_request_option(:available) %><br />
     <%= scan_request_option(:available) %>
   <% elsif ["NISAW"].include?(holding.sub_library.code) %>
-    <%= pickup_locations_field_set %>
-    <%= scan_request_option(:available) %>
+    <%= pickup_locations_field_set({hidden: true}) %>
+    <%= scan_request_option(:available, selected: true) %>
   <% else %>
     <%= request_option(:available) do %>
       <%= content_tag(:p, available_request_text) %>
